--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,5 @@
-/*
-  If you get stuck, feel free to watch the follow-up videos where I'll show you one solution
-*/
-
 /* ================================= 
-  Base Element Styles
+Base Element Styles
 ==================================== */
 
 * {
@@ -41,10 +37,14 @@ img {
 }
 
 /* ================================= 
-  Base Layout Styles
+Base Layout Styles
 ==================================== */
 
 /* ---- Navigation ---- */
+
+a {
+    line-height: 2.6rem;
+}
 
 .name {
     font-size: 1.25em;
@@ -88,16 +88,32 @@ img {
   Media Queries
 ==================================== */
 
-@media (min-width: 769px) {
+@media (max-width: 769px) {
 
-
-
-    /* ---- Float clearfix ---- */
-
-    .clearfix::after {
-        content: " ";
-        display: table;
-        clear: both;
+    .main-header {
+        text-align: center;
     }
 
-}
+    .logo {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 2.5rem;
+    }
+
+    .banner {
+        text-align: center;
+        padding-bottom: 2.5rem;
+    }
+
+
+    @media (min-width: 769px) {
+
+        /* ---- Float clearfix ---- */
+
+        .clearfix::after {
+            content: " ";
+            display: table;
+            clear: both;
+        }
+    }
