--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ a {
   Media Queries
 ==================================== */
 
+/* Smart mobile phones */
 @media (max-width: 769px) {
 
     .main-header {
@@ -121,21 +122,39 @@ a {
         text-align: center;
     }
 
-    @media (min-width: 769px) {
-        .main-header ul {
-            text-align: left;
-            display: inline-block;
-        }
 
-        /* ul {
-            display: inline-block;
-        } */
+    /* ---- Float clearfix ---- */
 
-        /* ---- Float clearfix ---- */
-
-        .clearfix::after {
-            content: " ";
-            display: table;
-            clear: both;
-        }
+    .clearfix::after {
+        content: " ";
+        display: table;
+        clear: both;
     }
+}
+
+/* tablets */
+
+@media (min-width: 770px) {
+    .name {
+        text-align: left;
+        padding-left: 3rem;
+    }
+
+    .main-nav {
+        display: inline-block;
+    }
+
+    li {
+        float: right;
+        padding: .5rem;
+    }
+
+    /* ---- Float clearfix ---- */
+
+    .clearfix::after {
+        content: " ";
+        display: table;
+        clear: both;
+    }
+
+}
