--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ a {
 
 /* tablets */
 
-@media (min-width: 770px) {
+@media (min-width: 770px) and (max-width: 1280px) {
     .name {
         padding-left: 3rem;
         display: inline-block;
