--- a/css/style.css
+++ b/css/style.css
@@ -3,37 +3,37 @@ Base Element Styles
 ==================================== */
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Varela Round', sans-serif;
-    line-height: 1.6;
-    color: #3a3a3a;
+  font-family: 'Varela Round', sans-serif;
+  line-height: 1.6;
+  color: #3a3a3a;
 }
 
 p {
-    font-size: .95em;
-    margin-bottom: 1.8em;
+  font-size: 0.95em;
+  margin-bottom: 1.8em;
 }
 
 h2,
 h3,
 a {
-    color: #093a58;
+  color: #093a58;
 }
 
 h2,
 h3 {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 /* ================================= 
@@ -43,45 +43,45 @@ Base Layout Styles
 /* ---- Navigation ---- */
 
 a {
-    line-height: 2.6rem;
+  line-height: 2.6rem;
 }
 
 .name {
-    font-size: 1.25em;
+  font-size: 1.25em;
 }
 
 .name a,
 .main-nav a {
-    text-align: center;
+  text-align: center;
 }
 
 .main-nav a {
-    font-size: .95em;
-    color: #3acec2;
-    text-transform: uppercase;
+  font-size: 0.95em;
+  color: #3acec2;
+  text-transform: uppercase;
 }
 
 .main-nav a:hover {
-    color: #093a58;
+  color: #093a58;
 }
 
 /* ---- Layout Containers ---- */
 
 .banner {
-    color: #fff;
-    background: #3acec2;
+  color: #fff;
+  background: #3acec2;
 }
 
 .main-footer {
-    background: #d9e4ea;
-    padding: 2em 0;
-    margin-top: 30px;
+  background: #d9e4ea;
+  padding: 2em 0;
+  margin-top: 30px;
 }
 
 /* ---- Page Elements ---- */
 
 .logo {
-    width: 190px;
+  width: 190px;
 }
 
 /* ================================= 
@@ -89,175 +89,183 @@ a {
 ==================================== */
 
 /* mobile phones */
+
 @media (max-width: 769px) {
+  .main-header {
+    text-align: center;
+  }
 
-    .main-header {
-        text-align: center;
-    }
+  .logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 2.5rem;
+  }
 
-    .logo {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        padding-top: 2.5rem;
-    }
+  .banner {
+    text-align: center;
+    padding-bottom: 2.5rem;
+  }
 
-    .banner {
-        text-align: center;
-        padding-bottom: 2.5rem;
-    }
+  h2 {
+    padding-top: 30px;
+    padding-left: 0.5rem;
+  }
 
-    h2 {
-        padding-top: 30px;
-        padding-left: .5rem;
-    }
+  p {
+    padding: 0.5rem 0.5rem 0 0.6rem;
+    margin-top: 0.1rem;
+    margin-bottom: 0.1rem;
+  }
 
-    p {
-        padding: .5rem .5rem 0 .6rem;
-        margin-top: .1rem;
-        margin-bottom: .1rem;
-    }
+  .main-footer {
+    text-align: center;
+  }
 
-    .main-footer {
-        text-align: center;
-    }
+  /* ---- Float clearfix ---- */
 
-
-    /* ---- Float clearfix ---- */
-
-    .clearfix::after {
-        content: " ";
-        display: table;
-        clear: both;
-    }
+  .clearfix::after {
+    content: ' ';
+    display: table;
+    clear: both;
+  }
 }
 
 /* tablets */
 
 @media (min-width: 770px) and (max-width: 1280px) {
-    .name {
-        padding-left: 3rem;
-        display: inline-block;
-    }
+  .name {
+    padding-left: 3rem;
+    display: inline-block;
+  }
 
-    ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-    }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
 
-    .main-nav {
-        float: right;
-        padding: .6rem 4rem;
-        font-weight: bold;
-    }
+  .main-nav {
+    float: right;
+    padding: 0.6rem 4rem;
+    font-weight: bold;
+  }
 
-    li {
-        display: inline;
-    }
+  li {
+    display: inline;
+  }
 
-    li a {
-        text-align: right;
-        padding: 1rem;
-    }
+  li a {
+    text-align: right;
+    padding: 1rem;
+  }
 
-    .banner {
-        text-align: center;
-        padding: 2rem 0 2.5rem;
-    }
+  .banner {
+    text-align: center;
+    padding: 2rem 0 2.5rem;
+  }
 
-    .primary {
-        width: 45%;
-        padding: 4rem .5rem 1rem 1.5rem;
-        align-content: center;
-        overflow: auto;
-        float: none;
-    }
+  .primary {
+    width: 45%;
+    padding: 4rem 0.5rem 1rem 1.5rem;
+    align-content: center;
+    overflow: auto;
+    float: none;
+  }
 
-    .secondary {
-        width: 45%;
-        padding: 4rem 2rem 1rem 1.5rem;
-        padding-left: 5rem;
-        float: left;
-        overflow: auto;
-    }
+  .secondary {
+    width: 45%;
+    padding: 4rem 2rem 1rem 5rem;
+    float: left;
+    overflow: auto;
+  }
 
-    .tertiary {
-        width: 100%;
-        padding: .5rem 2rem .1rem 5rem;
-    }
+  .tertiary {
+    width: 100%;
+    padding: 0.5rem 2rem 0.1rem 5rem;
+  }
 
-    .main-footer {
-        text-align: center;
-        overflow: auto;
-    }
+  .main-footer {
+    text-align: center;
+    overflow: auto;
+  }
 
-    /* ---- Float clearfix ---- */
+  /* ---- Float clearfix ---- */
 
-    .clearfix::after {
-        content: " ";
-        clear: both;
-        display: table;
-    }
+  .clearfix::after {
+    content: ' ';
+    clear: both;
+    display: table;
+  }
 }
 
 /* screens larger than tablets  */
 
 @media (min-width: 1281px) {
-    .name {
-        padding-left: 3rem;
-        display: inline-block;
-    }
+  .name {
+    padding-left: 3rem;
+    display: inline-block;
+  }
 
-    ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-    }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
 
-    .main-nav {
-        float: right;
-        padding: .6rem 4rem;
-        font-weight: bold;
-    }
+  .main-nav {
+    float: right;
+    padding: 0.6rem 4rem;
+    font-weight: bold;
+  }
 
-    li {
-        display: inline;
-        padding: 1rem;
-    }
+  li {
+    display: inline;
+  }
 
-    li a {
-        text-align: right;
-        padding: 1rem;
-    }
+  li a {
+    text-align: right;
+    padding: 1rem;
+  }
 
-    .banner {
-        text-align: center;
-        padding: 2rem 0 2.5rem;
-    }
+  .banner {
+    text-align: center;
+    padding: 2rem 0 2.5rem;
+  }
 
-    .primary {
-        width: 40%;
-    }
+  .primary {
+    width: 40%;
+    padding: 4rem 0.5rem 1rem 1.5rem;
+    text-align: center;
+    overflow: auto;
+    float: left;
+  }
 
-    .secondary {
-        width: 30%;
-    }
+  .secondary {
+    width: 25%;
+    padding: 4rem 2rem 1rem 1rem;
+    float: left;
+    overflow: auto;
+  }
 
-    .tertiary {
-        width: 30%;
-    }
+  .tertiary {
+    width: 35%;
+    padding: 4rem 2rem 0.1rem 5rem;
+    overflow: auto;
+    float: none;
+  }
 
-    .main-footer {
-        text-align: center;
-    }
+  .main-footer {
+    text-align: center;
+    /* overflow: auto; */
+    float: none;
+  }
 
-    /* ---- Float clearfix ---- */
+  /* ---- Float clearfix ---- */
 
-    .clearfix::after {
-        content: " ";
-        clear: both;
-        display: table;
-    }
-
+  .clearfix::after {
+    content: ' ';
+    clear: both;
+    display: table;
+  }
 }
